--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;annotationTest.afterClass()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;annotationTest.afterMethod()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;annotationTest.afterMethod()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>32</td> <td title="&lt;&lt;annotationTest.afterSuite()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>1</td> <td>&nbsp;</td><td title="&lt;&lt;annotationTest.afterTest()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;annotationTest.beforeClass()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;annotationTest.beforeMethod()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;annotationTest.beforeMethod()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-27</td> <td title="&gt;&gt;annotationTest.beforeSuite()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-16</td> <td>&nbsp;</td><td title="&gt;&gt;annotationTest.beforeTest()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="annotationTest.f()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">f</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="7d899b">  <td>19/08/27 10:18:50</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="annotationTest.f1()[pri:0, instance:lemon.day01.annotationTest@3ecf72fd]">f1</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
+  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
+  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
+  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
+  <td>main@691690486</td>   <td></td> </tr>
 </table>
