--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
-  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
-  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
-  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/09/04 18:42:47</td>   <td>637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case01.test_case(lemon.day13.section03.Register)[pri:0, instance:lemon.day13.section03.Register_Test_Case01@34340fab]">test_case</td> 
-  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:53</td>   <td>553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:53</td>   <td>660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:53</td>   <td>738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>1071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>1152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>1227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>1309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>1382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>19/09/05 11:50:54</td>   <td>1460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register_Test_Case2.test_case(lemon.day15.section01.ApiCase)[pri:0, instance:lemon.day15.section01.Register_Test_Case2@34340fab]">test_case</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
 </table>
