--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,42 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:30</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:30</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>1016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>1097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>1172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>1251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>1329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>1418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>1495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>1581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>1657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
-  <td>main@1365008457</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>1771</td> <td title="&lt;&lt;All_Test_Case.afterSuite()[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:32</td>   <td>0</td> <td title="&gt;&gt;All_Test_Case.BeforeSuite()[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">&gt;&gt;BeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:33</td>   <td>1640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:33</td>   <td>1660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:33</td>   <td>1669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:34</td>   <td>2649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>2731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>2810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>2888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>2963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>2967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:35</td>   <td>3659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day20_reg.pojo.ApiCaseDetail)[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">test_case</td> 
+  <td>main@2083562754</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>19/09/22 17:46:36</td>   <td>3787</td> <td title="&lt;&lt;All_Test_Case.afterSuite()[pri:0, instance:lemon.day20_reg.testcase.All_Test_Case@16c0663d]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2083562754</td>   <td></td> </tr>
 </table>
